# mkdocs-nbrender

./: .gitignore  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/javascripts/: mathjax.js
docs/notebooks/: demo.html  index.md  mynb.ipynb  nb-json.ipynb
javascripts/: render_math.js  webpack.config.js
javascripts/src/styles/: jupyter-lab.scss
mkdocs_nbrender/: foo.py  latex2svg.py  math_render.py  nb_transmute.py  plugin.py
mkdocs_nbrender/templates/html/: notebook.html.j2
mkdocs_nbrender/templates/html/assets/: MathJax.js  copy_code.js  custom.js  math_scroll_render.js  pre_render.js  render_nav.js
mkdocs_nbrender/templates/html/assets/styles/: extra.css  index.scss  theme.css
mkdocs_nbrender/templates/md/: md.j2
tests/: nb_transmulate_test.py
