[tool.poetry]
name = "mkdocs-nbrender"
version = "0.1.0"
description = "A MkDocs plugin to render jupyter notebook fast and dynammically"
authors = ["Michael Fei Wang"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mkdocs_nbrender"}]

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
